<resources>
    <string name="app_name">App Config</string>
    <string name="name_">Name:</string>
    <string name="authority_">Authority:</string>
    <string name="content_description_execute">Execute</string>
    <string name="result_title">Result:</string>
    <string name="delete">DELETE</string>
    <string name="clone">CLONE</string>
    <string name="cloned_name">%1$s - CLONE</string>
    <plurals name="keys_count">
        <item quantity="one">%1$d key</item>
        <item quantity="other">%1$d keys</item>
    </plurals>
    <plurals name="result_success">
        <item quantity="one">Success: Applied %1$d value</item>
        <item quantity="other">Success: Applied %1$d values</item>
    </plurals>
    <string name="result_access_denied">Access denied.</string>
    <string name="result_exception">Failure: %1$s</string>
    <string name="key_values_title">Key/Values:</string>
    <string name="execution_history_title">History</string>
    <string name="key_value">Key/Value</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="null_checkbox">Null</string>
    <string name="error_occurred">An error occurred, please try again.</string>
    <string name="external_config_locations">External Config Locations</string>
    <string name="url_">URL:</string>
    <string name="sync_external_config_locations">Sync External Config Locations</string>
    <string name="no_external_config_location">No config synced, please add an URL.</string>
    <string name="details">Details</string>
    <string name="config_details">Config Details</string>
    <string name="key_values">Key/Values</string>
    <string name="external_config_location">External Config</string>
    <string name="external_config_location_details">External Config Details</string>
    <string name="name_authority_explanation">Configure the name and the authority of your configuration
        entry.\n
        \n
        You can use any name but the authority needs to be typed
        exactly as it is defined in the AndroidManifest.xml file of the app under test.\n
        \n
    See <a href="https://github.com/PRosenb/AppConfig">AppConfig Library</a> for details.</string>
    <string name="config_list_empty">This app only works with an app under test that
        includes the <a href="https://github.com/PRosenb/AppConfig">library AppConfig</a>.\n
        \n
        It allows you to reconfigure your app by setting SharedPreferences in it so that you
        can e.g. point it to a staging or dev environment.</string>
    <string name="keyvalue_empty">Configure key/value pairs to be sent to the app under test.\n
        By default, all key/values you configure will be applied as SharedPreferences in
        the app under test.
        \n
    See <a href="https://github.com/PRosenb/AppConfig">AppConfig Library</a> for details.</string>
    <string name="external_config_location_empty">External Config allows you to fetch
        configuration entries from a configuration file located at a public URL.\n
        \n
        This file is a YAML file where the configuration entries are configured.\n
        \n
        The app syncs them on regular basis so that you can modify them over time.\n
        \n
        It allows to easily preconfigure the app for multiple testers. They can then clone the
        entries and modify them if required.\n
        \n
    See <a href="https://github.com/PRosenb/AppConfig">AppConfig Library</a> for details.</string>
    <string name="external_config_location_detail_explanation">Specify a name to identify the entry
        and type the public URL where the .yaml file of the external configuration is located.\n
        \n
        Please note that the public URL must be a https URL for security reasons and the whole URL
        needs to be specified including https, so e.g.\n
        https://example.com/config.yaml\n
        \n
    See <a href="https://github.com/PRosenb/AppConfigApp">App Config App</a> for details.</string>
</resources>
