<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/details_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nameAuthorityArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Name" />

        <TextView
            android:id="@+id/authority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/dividerNameAuthorityBottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:text="Authority" />

        <ImageView
            android:id="@+id/editNameAuthority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/dividerNameAuthorityBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <View
            android:id="@+id/dividerNameAuthorityBottom"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authority" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/keyValuesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/key_values_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAuthorityArea" />

    <View
        android:id="@+id/dividerTitleAndKeyValues"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/keyValuesTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/keyValues"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/execute"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTitleAndKeyValues" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addKeyValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/execute"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_plus_circle_outline" />

    <View
        android:id="@+id/dividerBetweenKeyValuesAndExecute"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/keyValues" />

    <ImageView
        android:id="@+id/execute"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/content_description_execute"
        app:layout_constraintBottom_toTopOf="@+id/dividerBetweenExecuteAndExecutionResults"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_playback_play" />

    <View
        android:id="@+id/dividerBetweenExecuteAndExecutionResults"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/executionHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:text="@string/execution_history_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerBetweenExecuteAndExecutionResults" />

    <View
        android:id="@+id/dividerBetweenTitleAndExecutionResults"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/executionHistory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/executionResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerBetweenTitleAndExecutionResults" />

</androidx.constraintlayout.widget.ConstraintLayout>